# bot

./: Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: db53947403f2_.py  f95947e7f305_.py
bot/cache/: redis.py
bot/core/: config.py  loader.py  session_manager.py
bot/core/base/: base_model.py  base_repository.py  base_service.py
bot/dialogs/main_menu/: states.py
bot/filters/: admin.py
bot/handlers/: __init__.py  menu.py  reactions.py  start.py  support.py
bot/handlers/on_click/: main_menu.py
bot/keyboards/: admin.py  default_commands.py  inline_menu.py
bot/lexicon/: lexicon.py  lexicon_en.py  lexicon_main.py  lexicon_ru.py
bot/middlewares/: __init__.py  auth.py  database.py  logging.py
bot/service/: backend.py  messages.py  users.py
bot/utils/: logging_tools.py  rate_limiter.py  setup_logging.py  translate.py  users_export.py
redisdata/: dump.rdb
